# MarkGuin

./: .gitignore  Cargo.toml  README.md  THIRD_PARTY_SOURCES.md  about.hbs  about.toml
.github/workflows/: release.yml
examples/: diagrams.md  images.md  math.md
packaging/macos/: Info.plist
src/: app.rs  document.rs  main.rs  markdown.rs
